tests/reject/tnolen.nim
discard """
  line: 8
  msg: "type mismatch: got (int literal(3))"
"""

# please finally disallow Len(3)

echo len(3)

